# pre-commit-pants

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
pre_commit_pants/: __init__.py  __main__.py  cli.py
