[tool.poetry]
name = "pre-commit-pants"
version = "0.1.0"
description = ""
authors = ["Pasquale Salza <pasquale.salza@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pre-commit-pants = "pre_commit_pants.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.9.0" }
toml = "^0.10.2"
types-toml = "^0.10.8.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
